# AURtomatic

./: .drone.yml  .gitignore  Cargo.toml  README.md
src/: config.rs  dir_diff.rs  error.rs  main.rs  pkgcheck.rs  pkgcheck_test.rs  tg_bot_wrapper.rs
tests/: pkgbuild_new
