[package]
name = "alpm_test"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "0.10.1"
aur-client-fork = "0.1.5"
pkginfo = "0.1.2"
tokio = { version = "0.2.22", features = ["full"] }
serde = "1.0.115"
serde_yaml = "0.8.13"
lib_remotebuild-rs = "0.1.3"
git2 = "0.13.10"
futures = "0.3.5"
reqwest = "0.10.8"
